# BCP_MD

./: MANIFEST.in  pyproject.toml  setup.py
dynamics/: genLammpsScript.py
model/: genLayeredFilm.py  run.py
model/ingredients/: data_blend_1.txt  data_blend_2.txt  data_pure_1.txt  data_pure_2.txt  data_pure_3.txt
model/randomwalk/: data.txt  in.parameters  main.cpp  randomwalk
model/results/: data_tuned.txt  in.glue.txt
model/templates/: t_glue.txt  t_welding.txt
src/cpp/bcp_md/model/: cpp_rw.cpp  cpp_rw.h
src/python/bcp_md/: __init__.py
src/python/bcp_md/analysis/: Colormaps.py  Data.py  __init__.py  test.py
src/python/bcp_md/model/: __init__.py  lmp.py
src/python/bcp_md/tools/: __init__.py  db.py
src/python_ext/bcp_md/model/: rw.cpp
