[build-system]
requires = [
  "setuptools>=61.0",
  "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bcp_md"
version = "0.0.0"
authors = [
  { name = "Suwon Bae", email = "suwon31@gmail.com" },
]
description = "Block Copolymer Modeling and Analysis Library"
requires-python = ">=3.7"


